<resources>
    <string name="app_name">innersect</string>

    <!-- hints -->
    <string name="email_hint">Email</string>
    <string name="username_hint">Username</string>
    <string name="username_email_hint">Username/Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="forgot">forgot?</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">No account yet? Create one</string>
    <string name="sign_up_button">Sign up</string>
    <string name="more">查看全部</string>
    <string name="week_new">Week New</string>
    <string name="login_out">退出登录</string>
    <string name="share_app">Recommend this App</string>
    <string name="rate_app">Rate this App</string>
    <string name="qv_add">+</string>
    <string name="qv_remove">-</string>
    <string name="select_num">选择数量</string>
    <string name="select_color">选择颜色</string>
    <string name="select_size">选择尺码</string>

    <string name="sale_hint">购买须知</string>
    <string name="connect_service">联系客服</string>
    <string name="feedback">反馈产品意见</string>
    <string name="service">售后</string>
    <string name="add_address">添加新地址</string>
    <string name="edit_address">编辑地址</string>
    <string name="account_manager">账户管理</string>
    <string name="address_management">地址管理</string>
    <string name="setting">设置</string>
    <string name="share">分享INNERSECT</string>
    <string name="my_order">我的订单</string>
    <string name="accept_message">接受推送消息</string>
    <string name="tel_num">联系电话</string>
    <string name="receiver">收货人</string>
    <string name="buy_ticket">立即购票</string>
    <string name="wechat">微信</string>
    <string name="sina">新浪</string>
    <string name="facebook">Facebook</string>
    <string name="set_password">设置密码</string>
    <string name="user_name">用户名</string>
    <string name="suggestion">反馈意见</string>
    <string name="clear_cache">清除缓存</string>
    <string name="about_innersect">关于innersect</string>
    <string name="set_default">设为默认</string>
    <string name="edit">编辑</string>
    <string name="complete">完成</string>
    <string name="unreceived">待收货</string>
    <string name="settlement">结算</string>
    <string name="select_all">全选</string>
    <string name="remove_select">删除所选</string>
    <string name="commodity_total_price">商品总价</string>
    <string name="commodity_detail">商品详情</string>
    <string name="order_detail">订单详情</string>
    <string name="order_list">订单列表</string>
    <string name="transport_price">运费</string>
    <string name="commit_order">提交订单</string>
    <string name="input_tel">请输入手机号</string>
    <string name="save">保存</string>
    <string name="me">我的</string>
    <string name="retry_code">重新获取（%s）</string>
    <string name="select_count">已选（%s）</string>
    <string name="month">%s月</string>
    <string name="commodity_num">%件商品</string>
    <string name="order_code">订单号: %s</string>
    <string name="acquire_code">获取验证码</string>
    <string name="contract">注册即代表同意INNERSECT服务条款"</string>
    <string name="add_shop_cart">加入购物车</string>
    <string name="buy_now">立即购买</string>
    <string name="delete">删除</string>
    <string name="brand_introduction">品牌介绍</string>
    <string name="select_pay_method">选择支付方式</string>
    <string name="phone_format_error">手机号码格式错误</string>
    <string name="order_success">支付成功</string>
    <string name="order_hint">预约才能获得入场资格</string>
    <string name="enter_hint">请向工作人员出示此页面，并凭此入场</string>
    <string name="order_now">马上预约</string>
    <string name="scan_hint">对准二维码到框内即可扫描</string>
    <string name="order">预约</string>
    <string name="select_pay">选择支付方式</string>
    <string name="enter_origin_pwd">请输入原密码</string>
    <string name="associate_account">关联账户</string>
    <string name="ali_pay">支付宝支付</string>
    <string name="wechat_pay">微信支付</string>
    <string name="xianxia_pay">线下支付</string>
    <string name="un_pay">待支付</string>
    <string name="order_cancel">已取消</string>
    <string name="on_transport">发货中</string>
    <string name="finish">已完成</string>
    <string name="presale">预售</string>
    <string name="show_transport">查看物流</string>
    <string name="help_service">申请售后</string>
    <string name="order_time">下单时间:</string>
    <string name="check_time">付款时间:</string>
    <string name="pay_style">付款方式:</string>
    <string name="start_reverse">开始预约</string>

    <string name="see">了解详情</string>

    <string name="reversed">已预约</string>
    <string name="reverse_full">已约满</string>
    <string name="reverse_finish">已结束</string>

    <string name="sale_out">已售罄</string>
    <string name="paypal_hint">仅支持海外银行卡，以美元结算</string>
    <string name="hint">现货商品在展会提货区提货，预售商品将邮寄到付给您</string>
    <string name="enter_way">"上海世博展览馆3号馆,世博馆路侧进入展会现场。\n\n 交通：8号线中华艺术宫站，7号线耀华路站，13号线世博大道站。</string>
    <string name="end_hint">你已经看完推荐啦~,去看看喜欢的品牌吧！</string>
    <string name="time_end_hint">结束倒计时：</string>
    <string name="pick_code">提货码</string>
    <string name="bind_">手环已绑定</string>
    <string name="bing_hint">请现场工作人员扫此二维码以绑定手环入场</string>
    <string name="bind_ring">绑定手环</string>
    <string name="transport">快递</string>
    <string name="pick_up">自提</string>
    <string name="privacy_policy">隐私条款</string>
    <string name="service_policy">服务条款</string>
    <string name="connect_custom">联系客服(10:30 - 18:30)</string>
    <string name="modify_name">更改用户名</string>
    <string name="enter_instruction">入场方式</string>
    <string name="post">提交</string>
    <string name="commit_success">反馈成功</string>
    <string name="commit_failed">反馈失败</string>
    <string name="reset_pwd">重置密码</string>
    <string name="pick_code_hint">请向店员提供您的提货码，扫描后即可确认订单</string>
    <string name="product_promise" formatted="false">100%正品</string>
    <string name="time_promise">七天退款</string>
    <string name="transport_promise">全国配送</string>
    <string name="product_promise_desc" formatted="false">"INNERSECT所售商品皆由品牌官方认证授权，100%官方品牌，请您放心购买;"</string>
    <string name="transport_promise_desc">全国配送:支持收货地址为港澳台地区。</string>
    <string name="time_promise_desc">七天退换:签收7天内可无条件申请退换货。INNERSECT收到并确定商品符合退换货标准后,将原路返还您所支付的钱款。</string>
    <string name="home">主页</string>
    <string name="infor">资讯</string>
    <string name="my">我的</string>
    <string name="buy_hint">购买须知</string>
    <string name="shop_cart">购物车</string>
    <string name="skip">"%d 跳过</string>

    <string name="schedule">日程</string>
    <string name="exhibitor">逛</string>
    <string name="map">地图</string>

    <string name="change">（切换）</string>
    <string name="chose_date">选择日期</string>
    <string name="is_coming">即将开始</string>
    <string name="feed_hint">HI,有什么需要反馈？</string>
    <string name="desc_problem">请详细描述你遇到的问题（必填）</string>
    <string name="contact">联系方式（选填）</string>
    <string name="feed_warm">反馈意见不能为空</string>

    <string name="authentic" formatted="false">100%正品</string>
    <string name="arrive">七天退款</string>
    <string name="refund">全国配送</string>

    <string name="product_detail">商品详情</string>
    <string name="color">颜色:</string>
    <string name="size_table">尺码对照表</string>
    <string name="item">/件</string>

    <string name="payment">支付</string>
    <string name="sub_total">总计：</string>

    <string name="discount">优惠</string>
    <string name="delivery_method">提货方式</string>
    <string name="shipping_price">运费</string>

    <string name="pay_immediately">立即支付</string>
    <string name="reserve_time">订单将为你保留：</string>
    <string name="product_wait">商品等待出库</string>
    <string name="arrive_hint">货已送达，感谢您的购买</string>
    <string name="track">查看物流</string>
    <string name="apply">申请售后</string>
    <string name="welcome">欢迎来到 INNERSECT</string>
    <string name="next">下一步</string>
    <string name="input_pwd">请输入密码</string>
    <string name="pwd_hint">请输入8-16位密码，支持数字和字母</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="verification_code">输入四位验证码</string>
    <string name="code_send">验证码已发送至手机：</string>
    <string name="bind_phone">绑定手机号</string>
    <string name="logout_title">确定要退出吗？</string>
    <string name="news_list_bottom">人气资讯整理中</string>
    <string name="day">天</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="second">秒</string>

    <string name="view_all">查看全部</string>

    <string name="on_sale">限时折扣</string>

    <string name="empty_cart">你的购物袋是空的</string>
    <string name="shopping_now">去逛逛</string>

    <string name="item_quantity">件商品</string>
    <string name="not_open">活动还未开始,我们会在开始时通知你哦</string>
    <string name="close">错过了,赶紧看看进行中的吧</string>

    <string name="see_detail">(点击地图查看详情)</string>
    <string name="site_map">场馆地图</string>

    <string name="select_country">选择国家</string>

    <string name="pull_down_refresh">下拉刷新</string>
    <string name="loading">刷新中...</string>
    <string name="release_refresh">松开以刷新</string>

    <string name="register_info">登记信息</string>
    <string name="name">姓名</string>
    <string name="credentials_type">证件类型</string>
    <string name="credentials_num">证件号码</string>
    <string name="gender">性别</string>
    <string name="age">年龄</string>

    <string name="reserve_qualification">预约资格</string>
    <string name="activity_rule">活动规则</string>

    <string name="order_text">第%d位中签</string>

    <string name="check_info">查看登记信息</string>
    <string name="unfold">展开</string>
    <string name="more_activity">更多活动</string>

    <string name="my_reservation">我的预约资格</string>
    <string name="finished">已结束</string>
    <string name="no_left">已抢光</string>
    <string name="start_reservation">%s开始预约</string>
    <string name="cancel_order">取消订单</string>

    <string name="in_area_hint">您目前位于发售地区可参与此活动</string>
    <string name="out_are_hint">您所在的区域暂时无法参与本次发售活动</string>
    <string name="without_permission">未能获取地理位置权限，去设置</string>

    <string name="identity_card">身份证</string>
    <string name="passport">护照</string>
    <string name="male">男</string>
    <string name="female">女</string>

    <string name="buy_guide">售前咨询</string>
    <string name="location_failed">暂时没有获取位置信息</string>


    <string name="exchange">兑换</string>
    <string name="coupon">优惠券</string>

    <string name="multi_use">可叠加</string>
    <string name="confirm">确认使用</string>
    <string name="available">可使用</string>
    <string name="unavailable">不可使用</string>
    <string name="use_instruction">使用说明</string>
    <string name="scope_all">全场通用</string>
    <string name="scope_part">部分商品可用</string>
    <string name="scope_special">指定商品可用</string>
    <string name="use_rule">满%.1f元使用</string>
    <string name="no_coupon">无可使用优惠券</string>
    <string name="coupon_available_count">%d张可用优惠券</string>
    <string name="coupon_use_count">已使用%d张</string>
    <string name="save_amount">节省￥%d.00</string>
    <string name="share_hint">分享可获得%s元优惠券</string>
    <string name="share_result">分享成功！获得%s元优惠券</string>
    <string name="share_toast">分享成功，优惠券已放到您的账户中</string>
    <string name="brand_list">品牌列表</string>


    <string name="hot_brand">热门品牌</string>
    <string name="category">品类</string>
    <string name="hot_search">大家都在搜</string>
    <string name="search_history">历史记录</string>
    <string name="clear_history">清除搜索记录</string>
    <string name="commodity">商品</string>
    <string name="search_hint">搜索商品、品牌、品类</string>

    <string name="category_list">品类列表</string>
    <string name="my_award">我的奖品</string>

    <string name="open_app">打开INNERSECT</string>
    <string name="consume">购买INNERSECT商品</string>
    <string name="broadcast">分享INNERSECT</string>
    <string name="evaluation">给好评</string>


    <string name="exchange_commodity">换货</string>
    <string name="refund_money">退款退货</string>
    <string name="title_activity_message">MessageActivity</string>


</resources>
