<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_16"
    android:orientation="vertical">

    <TextView
        android:text="@string/product_promise"
        android:drawableLeft="@mipmap/product_promise"
        android:drawablePadding="@dimen/padding_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:paddingTop="@dimen/padding_16"
        android:paddingBottom="@dimen/padding_16"
        android:text="@string/product_promise_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorLine"/>

    <TextView
        android:paddingTop="@dimen/padding_16"
        android:drawableLeft="@mipmap/time_promise"
        android:drawablePadding="@dimen/padding_4"
        android:text="@string/time_promise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:paddingTop="@dimen/padding_16"
        android:paddingBottom="@dimen/padding_16"
        android:text="@string/time_promise_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorLine"/>

    <TextView
        android:paddingTop="@dimen/padding_16"
        android:drawableLeft="@mipmap/transport_promise"
        android:drawablePadding="@dimen/padding_4"
        android:text="@string/transport_promise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:paddingTop="@dimen/padding_16"
        android:paddingBottom="@dimen/padding_16"
        android:text="@string/transport_promise_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>
