<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/padding_16"
    android:paddingTop="@dimen/padding_16">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/commodity_total_price"
            android:id="@+id/commodity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/commodity_price"
            android:text="$5000"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/discount_layout"
        android:paddingTop="@dimen/padding_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:visibility="invisible"
            android:paddingLeft="@dimen/padding_16"
            android:text="展会门票首单立减5元"
            android:id="@+id/discount_hint"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@android:color/secondary_text_dark"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/discount_view"
            android:text="-￥5.00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <FrameLayout
        android:visibility="gone"
        android:id="@+id/method_layout"
        android:paddingTop="@dimen/padding_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/delivery_method"
            android:id="@+id/method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_gravity="right"
            android:id="@+id/method_view"
            android:text="$0.00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>


    <FrameLayout
        android:paddingTop="@dimen/padding_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/shipping_price"
            android:id="@+id/transport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_gravity="right"
            android:id="@+id/transport_price"
            android:text="$0.00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/total_layout"
        android:visibility="gone"
        android:paddingTop="@dimen/padding_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/sub_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_gravity="right"
            android:id="@+id/total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>

</LinearLayout>

