<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tmmt.innersect.ui.activity.BaseActivity">

    <include layout="@layout/navigation_bar"
        android:id="@+id/action_bar"></include>

    <LinearLayout
        android:paddingLeft="@dimen/padding_16"
        android:layout_marginTop="@dimen/padding_32"
        android:layout_below="@id/action_bar"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_16"
            android:textSize="30sp"
            android:text="@string/input_pwd" />

        <EditText
            android:id="@+id/password_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_40"
            android:layout_marginBottom="@dimen/padding_8"
            android:background="@null"
            android:textColorHint="@android:color/secondary_text_dark"
            android:hint="@string/pwd_hint"
            android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:maxLength="16"
            android:inputType="textPassword" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divide_1"
            android:background="@drawable/divider_bg"/>


        <TextView
            android:paddingTop="@dimen/padding_16"
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_pwd"/>

    </LinearLayout>

</RelativeLayout>
