<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"

    tools:context="com.tmmt.innersect.ui.activity.BaseActivity">

    <include layout="@layout/common_top_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/padding_16">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/service_icon" />
                <TextView
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_16"
                    android:text="@string/feed_hint"/>

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="@dimen/padding_16"
                android:background="@drawable/stroke_gray_bg">

                <EditText
                    android:textSize="@dimen/txt_14"
                    android:id="@+id/feedback_view"
                    android:textColorHint="@android:color/secondary_text_dark"
                    android:background="@null"
                    android:gravity="top"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/desc_problem" />

            </FrameLayout>

            <TextView
                android:paddingLeft="@dimen/padding_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact" />

            <EditText
                android:layout_marginTop="@dimen/padding_16"
                android:background="@null"
                android:id="@+id/contact_view"
                android:textSize="@dimen/txt_14"
                android:textColorHint="@android:color/secondary_text_dark"
                android:paddingLeft="@dimen/padding_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:maxLength="11"
                android:hint="@string/input_tel" />

            <View
                android:layout_margin="@dimen/padding_16"
                android:layout_width="match_parent"
                android:layout_height="@dimen/divide_1"
                android:background="@drawable/divider_bg"/>

        </LinearLayout>

    </ScrollView>
</LinearLayout>
