<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tmmt.innersect.ui.activity.BaseActivity">

    <include layout="@layout/common_title_bar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@drawable/divider_bg"
            android:orientation="vertical"
            android:padding="@dimen/padding_16"
            android:showDividers="middle">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_16"
                android:layout_marginTop="@dimen/padding_16">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/accept_message" />

                <Switch
                    android:id="@+id/push_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:track="@drawable/switch_select"
                    android:thumb="@drawable/switch_button"
                    android:layout_gravity="right" />
            </FrameLayout>

            <FrameLayout
                android:visibility="gone"
                android:id="@+id/suggestion_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_16"
                android:layout_marginTop="@dimen/padding_16">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/suggestion" />

                <ImageView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="right"
                    android:src="@mipmap/chevron_right" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/cache_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_16"
                android:layout_marginTop="@dimen/padding_16">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/clear_cache" />

                <TextView
                    android:id="@+id/cache_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/about_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_16"
                android:layout_marginTop="@dimen/padding_16">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/about_innersect" />

                <TextView
                    android:id="@+id/version_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="V1.1" />

            </FrameLayout>

            <TextView
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_16"
                android:layout_marginTop="@dimen/padding_16"
                android:text="@string/login_out" />

        </LinearLayout>

        <include layout="@layout/progress_view"/>

    </FrameLayout>

</LinearLayout>
