<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_32">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/select_color" />

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/color_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_16"
            app:flexWrap="wrap"
            app:justifyContent="center">

        </com.google.android.flexbox.FlexboxLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/padding_32"
            android:gravity="center"
            android:text="@string/select_size" />

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/size_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_16"
            app:flexWrap="wrap"
            app:justifyContent="center">

        </com.google.android.flexbox.FlexboxLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/padding_32"
            android:gravity="center"
            android:text="@string/select_num" />

        <com.tmmt.innersect.widget.QuantityView
            android:id="@+id/quantity_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/padding_16"
            android:layout_marginTop="@dimen/padding_16">

        </com.tmmt.innersect.widget.QuantityView>
    </LinearLayout>

    <TextView
        android:id="@+id/popup_hint"
        android:visibility="gone"
        android:textColor="@android:color/white"
        android:background="#AEAEAE"
        android:gravity="center"
        android:padding="@dimen/padding_8"
        android:text="所选规格门店无货，仅支持邮寄"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_line_bg"
        android:padding="@dimen/padding_16">

        <TextView
            android:id="@+id/price_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:gravity="center"
            android:text="120.00$" />

        <TextView
            android:id="@+id/pop_action_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:background="@drawable/yellow_bg"
            android:gravity="center"
            android:minWidth="120dp"
            android:padding="@dimen/padding_8"
            android:text="@string/add_shop_cart" />

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/progress_view"
            android:indeterminateTint="@color/homeBg"
            android:indeterminateTintMode="src_atop"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_gravity="right" />
    </FrameLayout>

</LinearLayout>